@@ -1,8 +1,10 @@
 Sys.setenv("TZ"="Australia/Sydney")
 library(anytime)
-anydate(20150101)
-anydate("2015/01/01")
-anytime(20150101)
-anytime("2015/01/01")
-anydate("2015/01/01", tz="CET")
-anydate("2015/01/01", tz="Australia/Sydney")
+refD <- as.Date("2015-01-01")
+refT <- as.POSIXct(as.POSIXlt("2015-01-01"))
+stopifnot(refD == anydate(20150101))
+stopifnot(refD == anydate("2015/01/01"))
+stopifnot(refT == anytime(20150101))
+stopifnot(refT == anytime("2015/01/01"))
+stopifnot(refD == anydate("2015/01/01", tz="CET"))
+stopifnot(refD == anydate("2015/01/01", tz="Australia/Sydney"))
