@@ -1,3 +1,7 @@
+2016-12-21  Dirk Eddelbuettel  <edd@debian.org>
+
+	* tests/gh_issue_5.R: More tests
+
 2016-12-20  Dirk Eddelbuettel  <edd@debian.org>
 
 	* tests/allFormats.R: Significantly increased number of tests
